# taskman

./: .gitignore  BUGS.md  COMPACT.md  DATA_MODEL.md  README.md  ROADMAP.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: rust.yml  static.yml  test-build.yml
docs/: DATA_MODEL.md  REINGOLD-TILFORD.md
docs/records-pain/: layout-y-axis-spacing.md  test-coverage-inventory.md
frontend/: deno.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite-env.d.ts  vite.config.ts
frontend/public/: ichor_bg.wasm  index.html  sample.yaml
frontend/src/: App.css  App.tsx  index.css  main.tsx  themes.css  wasm.ts
frontend/src/components/: DeleteNodeDialog.tsx  EditNodeModal.tsx  GraphRenderer.tsx  NavigationPanel.tsx  ThemeModal.tsx
frontend/src/engine/: layout.ts
frontend/src/engine/__tests__/: layout.test.ts
frontend/src/hooks/: themeConstants.ts  useAutoSave.ts  useTheme.ts
frontend/src/hooks/__tests__/: useAutoSave.test.ts  useTheme.test.ts
frontend/src/types/: graph.ts
ichor/: Cargo.toml
ichor/src/: lib.rs  yaml.rs
ichor/src/graph/: mod.rs
